// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Control should render 1`] = `
<DocumentFragment>
  <label
    class="CardControl___StyledLabel-sc-28luv0-3 PNVuh"
  >
    <input
      class="CardControl__Input-sc-28luv0-0 lbnjeC"
      data-testid="card-control__undefined"
      type="checkbox"
      value=""
    />
    <div
      class="sc-AxhCb jCtSzq CardControl__CustomCard-sc-28luv0-1 hBgxxm"
      data-testid="Card"
    >
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Card Control should render with a control state 1`] = `
<DocumentFragment>
  <label
    class="CardControl___StyledLabel-sc-28luv0-3 PNVuh grid"
  >
    <input
      class="CardControl__Input-sc-28luv0-0 lbnjeC"
      data-testid="card-control__undefined"
      type="checkbox"
      value=""
    />
    <div
      class="sc-AxhCb jCtSzq CardControl__CustomCard-sc-28luv0-1 hBgxxm"
      data-testid="Card"
    >
      <div
        class="flex flex-col justify-between items-center h-full"
      >
        <span>
          Bitcoin
        </span>
        <div
          class="CardControl__StateStyle-sc-28luv0-2 gwKAJL"
          data-testid="card__control-state"
        >
          <div
            class="sc-AxjAm cpczEI"
            height="1em"
            width="1em"
          >
            <svg>
              checkmark.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </div>
  </label>
</DocumentFragment>
`;
